docs updated - teacher docs added
